# calib-board

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.py
boardCal/core/: ba.py  checkerboardGeometry.py  config.py  correspondences.py  scene.py
boardCal/utils/: sceneGenerator.py  utils.py
calibBoard/core/: checkerboard.py  externalCalibrator.py
calibBoard/preprocessing/: detect.py
calibBoard/utils/: convert_to_generic.py  visualization.py
calib_board/core/: ba.py  checkerboard.py  checkerboardGeometry.py  config.py  correspondences.py  externalCalibrator.py  observationCheckerboard.py  scene.py
calib_board/preprocessing/: detect.py
calib_board/utils/: config.py  convert_to_generic.py  sceneGenerator.py  utils.py  visualization.py
results/: camera_poses.json  correspondences.pkl  correspondences_detected.pkl  metrics.json  scene_estimate.pkl
results/synth/: camera_poses.json  correspondences.pkl  metrics.json  scene_estimate.pkl
scripts/: run.py  run_synth.py
src/calib_board/core/: ba.py  checkerboard.py  config.py  correspondences.py  externalCalibrator.py  observationCheckerboard.py  scene.py
src/calib_board/preprocessing/: detect.py
src/calib_board/utils/: convert_to_generic.py  sceneGenerator.py  visualization.py
